<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AdminNewUserActivity"
    android:background="@drawable/bg_all">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_user_toolbar_gui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/admin_new_user_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_user_save_gui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_icon"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="512dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_user_toolbar_gui"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/admin_user_fullname_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/user_name_text"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/admin_user_role_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:background="@android:drawable/editbox_background"
            android:drawableEnd="@android:drawable/arrow_down_float"
            android:drawablePadding="16dp"
            android:hint="@string/user_role_text"
            android:padding="10dp"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/admin_user_phone_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/user_phone_number"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/admin_user_email_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/user_email_text"
            android:inputType="textEmailAddress"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/admin_user_password_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/user_password_text"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/admin_user_password_confirm_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/user_password_confirm_text"
            android:textSize="23sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>