<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginScreenActivity"
    android:background="@drawable/bg_new">

    <ImageView
        android:id="@+id/login_settings_gui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleX="2"
        android:scaleY="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_icon" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="220dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/login_title"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_email_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail_icon"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/login_password_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_icon"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/login_button_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text" />

        <CheckBox
            android:id="@+id/login_stay_logged_gui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Maradjak bejelentkezve" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>